--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,14 @@ authors:
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
     description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
+  dastronom:
+    name: Dastronom
+    display_name: Dastronom    
+    avatar: 'assets/images/avatar.png'
+    email: dastronom@protonmail.com
+    web: https://www.wowthemes.net
+    twitter: https://twitter.com/dastronomm
+    description: "Write a short description of the author here. You are currently previewing Memoirs demo, a Jekyll template compatible with Github pages."
 
 # Plugins
 plugins:
